@@ -2,14 +2,14 @@ escape_char  /
 comment_char  %
 
 % English language locale for South Africa
-% Source: Zuza Software Foundation
+% Source: Zuza Software Foundation (Translate.org.za)
 % Email: dwayne@translate.org.za
-% Tel: +27 21 4487827
-% Fax: +27 21 4489574
+% Tel: +27 12 3430389
+% Fax: +27 12 3430389
 % Language: en
 % Territory: ZA
-% Revision: 1.1
-% Date: 2003-03-14
+% Revision: 1.2
+% Date: 2003-10-27
 % Users: general
 % Repertoiremap: mnemonic,ds
 % Charset: ISO-8859-1
@@ -17,6 +17,20 @@ comment_char  %
 % for commercial purposes.
 %
 % Changelog
+% 1.2 (2004-10-27):
+%     2004-10-27 Dwayne Bailey <dwayne@translate.org.za>
+%       - Remove .* from LC_MESSAGES yes/noexpr
+%       - Change contact details and add Translate.org.za
+%         to project name
+%     2004-03-30 Dwayne Bailey <dwayne@translate.org.za>
+%       - Added country_post
+%       - Added abbreviation to LC_IDENTIFICATION
+%     2003-05-17 Dwayne Bailey <dwayne@translate.org.za>
+%       - Add lang_ab, lang_term
+%       - Add various comments for reference documents
+%       - Add country_isbn, country_car, country_ab2, 
+%         country_ab3, country_num
+%       - Add name_* for all salutations
 % 1.1 (2003-03-14):
 %   - Updated maintainer to Zuza Software Foundation
 %   - Changed %x for LC_TIME to use dd/mm/ccyy
@@ -27,16 +41,19 @@ comment_char  %
 
 LC_IDENTIFICATION
 title      "English locale for South Africa"
-source     "Zuza Software Foundation"
-address    "Box 13412, Mowbray, 7701, South Africa"
+source     "Zuza Software Foundation (Translate.org.za)"
+address    "Box 28364, Sunnyside, 0132, South Africa"
 contact    "Dwayne Bailey"
 email      "dwayne@translate.org.za"
-tel        "+27 21 448 7827"
-fax        "+27 21 448 9574"
+tel        "+27 12 343 0389"
+fax        "+27 12 343 0389"
 language   "English"
 territory  "South Africa"
-revision   "1.1"
-date       "2003-03-14"
+% audience     ""
+% application  ""
+abbreviation "Translate.org.za"
+revision   "1.2"
+date       "2003-10-27"
 %
 category  "en_ZA:2003";LC_IDENTIFICATION
 category  "en_ZA:2000";LC_CTYPE
@@ -47,7 +64,7 @@ category  "en_ZA:2000";LC_MONETARY
 category  "en_ZA:2003";LC_MESSAGES
 category  "en_ZA:2000";LC_PAPER
 category  "en_ZA:2000";LC_MEASUREMENT
-category  "en_ZA:2000";LC_NAME
+category  "en_ZA:2003";LC_NAME
 category  "en_ZA:2003";LC_ADDRESS
 category  "en_ZA:2003";LC_TELEPHONE
 
@@ -62,12 +79,23 @@ copy "iso14651_t1"
 END LC_COLLATE
 
 LC_MONETARY
+% ISO 4217 Currency and fund codes
+% http://www.bsi-global.com/Technical+Information/Publications/_Publications/tig90.xalter
+% "ZAR "
 int_curr_symbol         "<U005A><U0041><U0052><U0020>"
+
+% "R"
 currency_symbol         "<U0052>"
+
+% "."
 mon_decimal_point       "<U002E>"
+
+% ","
 mon_thousands_sep       "<U002C>"
 mon_grouping            3;3
 positive_sign           ""
+
+% "-"
 negative_sign           "<U002D>"
 int_frac_digits         2
 frac_digits             2
@@ -80,16 +108,24 @@ n_sign_posn             1
 END LC_MONETARY
 
 LC_NUMERIC
+% "."
 decimal_point           "<U002E>"
+
+% ","
 thousands_sep           "<U002C>"
 grouping                3;3
 END LC_NUMERIC
 
 LC_TIME
+% abday - The abbreviations for the week days:
+% - Sun, Mon, Tue, Wed, Thu, Fri, Sat
 abday       "<U0053><U0075><U006E>";"<U004D><U006F><U006E>";/
             "<U0054><U0075><U0065>";"<U0057><U0065><U0064>";/
             "<U0054><U0068><U0075>";"<U0046><U0072><U0069>";/
             "<U0053><U0061><U0074>"
+
+% day - The full names of the week days:
+% - Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
 day         "<U0053><U0075><U006E><U0064><U0061><U0079>";/
             "<U004D><U006F><U006E><U0064><U0061><U0079>";/
             "<U0054><U0075><U0065><U0073><U0064><U0061><U0079>";/
@@ -97,12 +133,19 @@ day         "<U0053><U0075><U006E><U0064><U0061><U0079>";/
             "<U0054><U0068><U0075><U0072><U0073><U0064><U0061><U0079>";/
             "<U0046><U0072><U0069><U0064><U0061><U0079>";/
             "<U0053><U0061><U0074><U0075><U0072><U0064><U0061><U0079>"
+
+% abmon - The abbreviations for the months 
+% - Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
 abmon       "<U004A><U0061><U006E>";"<U0046><U0065><U0062>";/
             "<U004D><U0061><U0072>";"<U0041><U0070><U0072>";/
             "<U004D><U0061><U0079>";"<U004A><U0075><U006E>";/
             "<U004A><U0075><U006C>";"<U0041><U0075><U0067>";/
             "<U0053><U0065><U0070>";"<U004F><U0063><U0074>";/
             "<U004E><U006F><U0076>";"<U0044><U0065><U0063>"
+
+% mon - The full names of the months - 
+% - January, February, March, April, May, June
+%   July, August, September, October, November, December
 mon         "<U004A><U0061><U006E><U0075><U0061><U0072><U0079>";/
             "<U0046><U0065><U0062><U0072><U0075><U0061><U0072><U0079>";/
             "<U004D><U0061><U0072><U0063><U0068>";/
@@ -115,19 +158,57 @@ mon         "<U004A><U0061><U006E><U0075><U0061><U0072><U0079>";/
             "<U004F><U0063><U0074><U006F><U0062><U0065><U0072>";/
             "<U004E><U006F><U0076><U0065><U006D><U0062><U0065><U0072>";/
             "<U0044><U0065><U0063><U0065><U006D><U0062><U0065><U0072>"
+
+% Abreviated date and time representation to be referenced by the "%c" field descriptor -
+%
+% "%a" (short weekday name),
+% "%d" (day of month as a decimal number),
+% "%b" (short month name),
+% "%Y" (year with century as a decimal number),
+% "%T" (24-hour clock time in format HH:MM:SS),
+% "%Z" (Time zone name)
 d_t_fmt     "<U0025><U0061><U0020><U0025><U0064><U0020><U0025><U0062><U0020><U0025><U0059><U0020><U0025><U0054><U0020><U0025><U005A>"
+
+% Date representation to be referenced by the "%x" field descriptor -
+% "%d/%m/%Y", day/month/year as decimal numbers (01/01/2000).
 d_fmt       "<U0025><U0064><U002F><U0025><U006D><U002F><U0025><U0059>"
+
+% Time representation to be referenced by the "%X" field descriptor -
+% "%T" (24-hour clock time in format HH:MM:SS)
 t_fmt       "<U0025><U0054>"
+
+% Define representation of ante meridiem and post meridiem strings -
+% The "" mean default to "AM" and "PM".
 am_pm       "";""
+
+% Define time representation in 12-hour format with "am_pm", to be referenced by the "%r"
+% The "" means that this format is not supported.
 t_fmt_ampm  ""
+
+% Date representation not described in ISO/IEC 14652. Comes out as -
+% "%a %b %e %H:%M:%S %Z %Y" which is default "date" command output
+%
+% %a - abbreviated weekday name,
+% %b - abreviated month name,
+% %e - day of month as a decimal number with leading space (1 to 31),
+% %H - hour (24-hour clock) as a decimal number (00 to 23),
+% %M - minute as a decimal number (00 to 59),
+% %S - seconds as a decimal number (00 to 59),
+% %Z - time-zone name,
+% %Y - year with century as a decimal number,e.g. 2001.
 date_fmt	"<U0025><U0061><U0020><U0025><U0062><U0020><U0025><U0065>/
 <U0020><U0025><U0048><U003A><U0025><U004D><U003A><U0025><U0053><U0020>/
 <U0025><U005A><U0020><U0025><U0059>"
 END LC_TIME
 
 LC_MESSAGES
-yesexpr     "<U005E><U005B><U0079><U0059><U005D><U002E><U002A>"
-noexpr      "<U005E><U005B><U006E><U004E><U005D><U002E><U002A>"
+% The affirmative response -
+% "^[yY]"
+yesexpr     "<U005E><U005B><U0079><U0059><U005D>"
+
+% The negative response -
+% "^[nN]"
+noexpr      "<U005E><U005B><U006E><U004E><U005D>"
 END LC_MESSAGES
 
 LC_PAPER
@@ -136,10 +217,26 @@ width    210
 END LC_PAPER
 
 LC_TELEPHONE
+% Representation of telephone number for international use -
+% "+%c %a %l", which is
+% "+%c - country code",
+% "%a - area code without the prefix (often 0)",
+% "%l local number".
 tel_int_fmt    "<U002B><U0025><U0063><U0020><U0025><U0061><U0020><U0025>/
 <U006C>"
+
+% Represntation of telephone number for domestic use -
+% "(%A) %l", which is
+% %A - area code with national prefix
+% %l - local number".
 tel_dom_fmt    "<U0028><U0025><U0041><U0029><U0020><U0025><U006C>"
+
+% Prefix for making international calls
+% "09"
 int_select     "<U0030><U0039>"
+
+% International dialing code
+% "27"
 int_prefix     "<U0032><U0037>"
 
 END LC_TELEPHONE
@@ -149,20 +246,106 @@ measurement    1
 END LC_MEASUREMENT
 
 LC_NAME
+% Format for addressing a person.
+% "%d%t%g%t%m%t%f"
+%
+% "Salutation",
+% "Empty string, or <Space>",
+% "First given name",
+% "Empty string, or <Space>",
+% "Middle names",
+% "Empty string, or <Space>",
+% "Clan names"
 name_fmt    "<U0025><U0064><U0025><U0074><U0025><U0067><U0025><U0074>/
 <U0025><U006D><U0025><U0074><U0025><U0066>"
+
+% General salutation for any sex
+% (no term)
+name_gen    ""
+
+% Salutation for unmarried females
+% "Miss"
+name_miss   "<U004D><U0069><U0073><U0073>"
+ 
+% Salutation for males
+% "Mr"
+name_mr     "<U004D><U0072>"
+
+% Salutation for married females
+% "Mrs"
+name_mrs    "<U004D><U0072><U0073>"
+
+% Salutation valid for all females
+% "Ms"
+name_ms     "<U004D><U0073>"
 END LC_NAME
 
 LC_ADDRESS
+% Representation of postal addresses (minus the addressee's name) in South
+% Africa. (Ignored for now)
+% "%f%N%a%N%d%N%b%N%s %h %e %r%N%%z %T%N%c%N", which gives -
+%
+% "firm name",
+% "end of line",
+% "C/O address",
+% "end of line",
+% "department name",
+% "Building name",
+% "end of line",
+% "street or block name",
+% "space",
+% "house number or designation",
+% "space",
+% "floor number",
+% "space",
+% "room number, door designation",
+% "end of line",
+% "postal code",
+% "space",
+% "town, city",
+% "end of line",
+% "country designation for the <country_post> keyword",
+% "end of line
 postal_fmt    "<U0025><U0066><U0025><U004E><U0025><U0061><U0025><U004E>/
 <U0025><U0064><U0025><U004E><U0025><U0062><U0025><U004E><U0025><U0073>/
 <U0020><U0025><U0068><U0020><U0025><U0065><U0020><U0025><U0072><U0025>/
 <U004E><U0025><U0025><U007A><U0020><U0025><U0054><U0025>/
 <U004E><U0025><U0063><U0025><U004E>"
+
+% Country name in English - "South Africa"
 country_name  "<U0053><U006F><U0075><U0074><U0068><U0020>/
 <U0041><U0066><U0072><U0069><U0063><U0061>"
+
+% Language name in English - "English"
 lang_name     "<U0045><U006E><U0067><U006C><U0069><U0073><U0068>"
+
+% CEPT MAILCODES are suggested
+% Alternatively use the code found on your countries postal item tracking number
+% "ZA"
+country_post   "<U005A><U0041>"
+
+% UN Geneve 1949:68 Distinguishing signs of vehicles in international traffic
+% http://www.unece.org/trans/conventn/disting-signs-5-2001.pdf
+% "ZA"
+country_car   "<U005A><U0041>"
+
+% ISO 2108
+% http://www.isbn-international.org/html/prefix/prefa.htm
+country_isbn  0
+
+% ISO 639 language abbreviations:
+% 639-1 2 letter, 639-2 3 letter terminology
+% http://www.loc.gov/standards/iso639-2/englagn.html
+% "en", "eng"
+lang_ab       "<U0065><U006E>"
+lang_term     "<U0065><U006E><U0067>"
+lang_lib      "<U0065><U006E><U0067>"
+
+% ISO 3166 country number and 2 and 3 letter abreviations
+% http://www.unicode.org/onlinedat/countries.html
+% "ZA", "ZAF"
 country_ab2   "<U005A><U0041>"
 country_ab3   "<U005A><U0041><U0046>"
 country_num   710
+
 END LC_ADDRESS
